Add and implement core bets logic (no randomizer)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="card">
+  <div class="card-body">
+    <%= render 'accounts/index' %>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <%= render 'bets/form' %>
+  </div>
+</div>
