--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,6 @@
 
 <div class="card">
   <div class="card-body">
-    <%= render 'bets/form' %>
+    <%= render 'bets/form', remote: true %>
   </div>
 </div>
