--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -2,6 +2,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :amount %>
+    <%= f.input :amount_currency, collection: all_currencies %>
   </div>
 
   <div class="form-actions">
