--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Account</h1>
+<h1>Create a new account</h1>
 
 <%= render 'form', account: @account %>
 
-<%= link_to 'Back', accounts_path %>
+<%= link_to 'Back', root_path %>
