--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -3,7 +3,9 @@
 
   <div class="form-inputs">
     <%= f.input :amount %>
-    <%= f.input :amount_currency, collection: all_currencies %>
+    <% unless edit_action %>
+      <%= f.input :amount_currency, collection: all_currencies %>
+    <% end %>
   </div>
 
   <div class="form-actions">
