Make the list of available currencies located in a single place (lib/common_helpers.rb), and loaded where needed (shared among models and helpers)

--- a/app/views/accounts/_index.html.erb
+++ b/app/views/accounts/_index.html.erb
@@ -12,4 +12,4 @@
   </tbody>
 </table>
 
-<%= link_to 'Create new account', new_account_path %>
+<%= link_to 'Create a new account', new_account_path %>
