--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,3 +23,9 @@
     <%= render 'bets/last_bets' %>
   </div>
 </div>
+
+<div class="card">
+  <div class="card-body">
+    <%= render 'bets/top_bets' %>
+  </div>
+</div>
