--- a/app/views/bets/create.js.erb
+++ b/app/views/bets/create.js.erb
@@ -35,7 +35,7 @@ for (let account in accounts) {
   `;
   log_table.prepend(log_table_tr);
 
-  log_table_length = log_table.rows.length;
+  var log_table_length = log_table.rows.length;
   if (log_table_length > 5) {
     log_table.deleteRow(log_table_length - 1);
   }
