--- a/app/views/bets/_top_bets.html.erb
+++ b/app/views/bets/_top_bets.html.erb
@@ -1,23 +1,25 @@
-<h3>Top Wins!</h3>
-<table class="table">
-  <thead>
-    <th>Bet</th>
-    <th>Win</th>
-    <th>Currency</th>
-    <th>Win (EUR)</th>
-    <th>Time</th>
-    <th>Player</th>
-  </thead>
-  <tbody id="top_wins">
-    <% @top_wins.each do |win| %>
-      <tr>
-        <td class="amount"><%= win.bet_amount %></td>
-        <td class="amount"><%= win.win_amount %></td>
-        <td class="currency"><%= win.bet_amount_currency %></td>
-        <td class="amount"><%= win.win_amount_eur %></td>
-        <td class="created_at"><%= win.created_at %></td>
-        <td class="created_at"><%= win.user.email %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div id="top_bets">
+  <h3>Top Wins!</h3>
+  <table class="table">
+    <thead>
+      <th>Bet</th>
+      <th>Win</th>
+      <th>Currency</th>
+      <th>Win (EUR)</th>
+      <th>Time</th>
+      <th>Player</th>
+    </thead>
+    <tbody id="top_wins">
+      <% @top_wins.each do |win| %>
+        <tr>
+          <td class="amount"><%= win.bet_amount %></td>
+          <td class="amount"><%= win.win_amount %></td>
+          <td class="currency"><%= win.bet_amount_currency %></td>
+          <td class="amount"><%= win.win_amount_eur %></td>
+          <td class="created_at"><%= win.created_at %></td>
+          <td class="created_at"><%= win.user.email %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
