--- a/app/views/bets/_top_bets.html.erb
+++ b/app/views/bets/_top_bets.html.erb
@@ -3,7 +3,7 @@
   <table class="table">
     <thead>
       <th>#</th>
-      <th>Win (EUR)</th>
+      <th>Win <%= fa_icon 'eur' %></th>
       <th>Bet</th>
       <th>Win</th>
       <th>Currency</th>
