--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', account: @account, edit_action: @edit_action %>
 
-<%= link_to 'Back', root_path %>
+<%= link_to (fa_icon "arrow-left", text: 'Back'), root_path %>
