--- a/app/views/bets/_form.html.erb
+++ b/app/views/bets/_form.html.erb
@@ -16,10 +16,10 @@
   <div class="form-inputs">
     <%= f.input :bet_amount %>
     <%= f.input :bet_amount_currency,
-      collection: all_currencies %>
+      collection: all_currencies, label: 'Bet currency' %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Place a bet' %>
   </div>
 <% end %>
